--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
     <li><a href="limites-continuite.html">1. Limites et Continuité</a></li>
     <li><a href="derivation.html">2. Dérivation</a></li>
     <li><a href="suites.html">3. Suites Numériques</a></li>
-    <!-- أضف باقي الروابط هنا --><a>href="limites et continuité" </a>
+    <ul>
+  <li><a href="limites-continuite.html">1. Limites et continuité</a></li>
+  <li><a href="derivation.html">2. Dérivation – Étude de fonctions</a></li>
+  <li><a href="suites.html">3. Suites numériques</a></li>
+ </ul>
   </ul>
 </body>
 </html>
